--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#f2f2f3",
   "icons": [
     {
-      "src": "exness.png",
+      "src": "mark.jpeg",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "exness2.png",
+      "src": "stamp.jpeg",
       "sizes": "512x512",
       "type": "image/png"
     }
